[package]
name = "nexus-drv-power"
version = "1.0.0"
authors = ["Richard Schleich <rs@noreya.tech>", "Philipp Polzhofer <pp@noreya.tech>"]
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
crossbeam-channel = "0.5.6"
log = "0.4.8"
signal-hook = "0.3.15"
sd-notify = "0.4.0"
noreya_sdbp = { package = "noreya_sdbp", git = "https://github.com/noreya-nexus/rustlib-noreya-sdbp.git", version = "1.0.*", features = ["power", "service", "log"] }
